# nitrocoro-redis

./: .gitignore  CMakeLists.txt  README.md
cmake/: nitrocoro-redisConfig.cmake.in
include/nitrocoro/redis/: Redis.h  RedisClient.h  RedisConnection.h  RedisConnection.inl  RedisPool.h  RedisResult.h  Result.h
src/: PoolState.cc  PoolState.h  PooledConnection.cc  PooledConnection.h  Redis.cc  RedisClient.cc  RedisConnection.cc  RedisConnectionImpl.cc  RedisConnectionImpl.h  RedisPool.cc  RedisResult.cc  Result.cc
tests/: redis_pool_test.cc  redis_test.cc
